# course-setup

./: .gitignore  CLAUDE.md  LICENSE  MANUAL.md  README.md  TODO-modernize.md  TODO-platformdirs.md  TODO-readme-source.md  TODO.md  main.py  pyproject.toml  retire-course.py  setup-course.py  setup_course_github.py
src/course_setup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/setup_course_github/: __init__.py  archive_course.py  config.py  init_config.py  retire_course.py  setup_course.py  unretire_course.py
src/setup_course_github/generic/: .gitignore  README.md
tests/: test_archive_course.py  test_config.py  test_init_config.py  test_retire_course.py  test_setup_course.py  test_unretire_course.py
