[project]
    name = "course-setup"
    version = "0.5.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = [
        "pygithub>=2.7.0",
    ]

[project.scripts]
    setup-course = "setup_course_github.setup_course:main"
    retire-course = "setup_course_github.retire_course:main"


[build-system]
  requires = ["setuptools", "wheel"]
  build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
  setup_course_github = ["generic/**/*"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[tool.black]
  line-length = 88
  target-version = ["py313"]

[tool.ruff]
  line-length = 88
  target-version = "py313"

[tool.ruff.lint]
  select = ["E", "F", "I"]

[tool.mypy]
  strict = true
  python_version = "3.13"

[tool.pytest.ini_options]
  addopts = "--cov=setup_course_github --cov-report=term-missing --cov-fail-under=100"
  testpaths = ["tests"]

[tool.coverage.run]
  source = ["src"]

[tool.coverage.report]
  exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
  ]
